[FIX] web: settings control panel's layout on small screen
The custom control panel for Settings form view has radically changed
and the old CSS rules (`.o_settings_title`, `.o_setting_search`) didn't
apply anymore, so we remove it.

Note that the form view uses a custom control panel `FormControlPanel`
but the settings form view uses the normal one: `ControlPanel`.

In this commit, we adapt the CSS to reflect the normal control panel
(e.g. the one used by the Kanban view)

Also note the differance between the old version and now:
* before (< Odoo 15.2) the input search was focused when the app was
opened and there wasn't any title
* after (>= Odoo 16) we have harmonized the search to match the other
control panel, so we have to click on the magnifying glass to show
the search input.

Steps to reproduce:
* Open Odoo on a small screen (e.g. on Mobile)
* Open the Settings app => BUG the magnifying glass isn't at the right
position.

X-original-commit: 91ab277ef66a2ca6b34c13fcba7197f18c50aab0

--- a/addons/web/static/src/views/form/form_controller.scss
+++ b/addons/web/static/src/views/form/form_controller.scss
@@ -932,14 +932,6 @@
         }
     }
     @include media-breakpoint-down(md) {
-        .o_control_panel {
-            padding-right: 16px;
-
-            > div.o_cp_top {
-                flex-flow: column;
-            }
-        }
-
         .o_cp_buttons {
             width: 100%;
             div, .o-kanban-button-new {
